--- a/front/src/components/pokeapi/pokeapi.css
+++ b/front/src/components/pokeapi/pokeapi.css
@@ -2,7 +2,6 @@
     width: 50%;
     display: flex;
     transform: translate(50%);
-
 }
 
 .pokemon {
@@ -10,3 +9,36 @@
     justify-content: space-between;
 }
 
+.pokemonContainer {
+    width: 100%;
+    margin-top: 4rem;
+}
+
+.pokemonContainerImg {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: 250px;
+}
+
+.h2Text {
+    display: flex;
+    justify-content: center;
+    font-size: 26px;
+    color: black;
+}
+
+.pokemonsDiv {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4rem;
+    margin-top: 2rem;
+    gap: 6rem;
+}
+
+.buttonNext {
+    border: 2px solid black;
+    padding: 1rem;
+    border-radius: 30px;
+    
+}
